# qfluent_community

./: LICENSE  README.md  main.py  pyproject.toml
examples/: demo.py
qfluent_community/: __init__.py
qfluent_community/core/: __init__.py  animation.py  base.py  effects.py  icon.py  style.py  theme.py
qfluent_community/widgets/: __init__.py  button.py  checkbox.py  combobox.py  icon_widget.py  radiobutton.py  slider.py  switch.py
qfluent_community/window/: __init__.py  fluent_window.py  splash_screen.py  title_bar.py
